idf_component_register(
    SRCS 
    "esp_zb_controller_main.c"
    "app_hardware_driver_on_off.c"
    "app_hardware_driver_analog_dimming.c"
    "app_hardware_driver_phase_cut_dimmimg.c"
    "app_hardware_driver_rgb_dimming.c"
    "app_hardware_driver_light_fan_control.c"
    "app_hardware_driver_dali_dimmable_group.cpp"
    "app_hardware_driver_dali_rgb.cpp"
    "app_hardware_driver_dali_tunable_light.cpp"
    "app_hardware_driver_dali_tunable_light_tuya.cpp"
    "app_nvs_store_info.c"
    "app_zigbee_clusters.c"
    "switch_driver.c"
    "app_nuos_timer.c"
    "parson.c"
    "app_hardware_driver_ir_blaster.cpp"
    "app_hardware_driver_sensor_motion.c"
    "app_hardware_driver_sensor_gas_leak.cpp"
    "app_hardware_driver_sensor_temperature_humidity.cpp"
    "app_hardware_driver_sensor_illuminance.cpp"
    "app_hardware_driver_scene_switch.c"
    "app_hardware_driver_wireless_scene_switch.c"
    "app_hardware_driver_ringing_bell.c"
    "app_hardware_driver_curtain.c"
    "app_zigbee_query_nodes.c"
    "app_zigbee_misc.c"
    "esp_wifi_station.c"
    "esp_wifi_webserver.c"
    "app_webserver_webpage_design.c"
    "nuos_zigbee_group_commands.c" 
    "nuos_zigbee_scene_commands.c" 
    "zigbee_2_uart.c"

    SRC_DIRS "." "../../../common/zcl_utility/src"
    INCLUDE_DIRS "." "../../../common/zcl_utility/include"
    REQUIRES light_driver espressif__esp-zboss-lib mbedtls nvs_flash esp_timer app_update esp_http_server cjson esp_wifi
)
